--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,25 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
+#{if frontPost}
 
-<h1>A blog will be here</h1>
+    #{display post:frontPost, as:'home' /}
+
+    #{if olderPosts.size()}
+
+    <div class="older-posts">
+        <h3>Older posts <span class="from">from this blog</span></h3>
+
+        #{list items:olderPosts, as:'oldPost'}
+            #{display post:oldPost, as:'teaser' /}
+        #{/list}
+    </div>
+
+    #{/if}
+
+#{/if}
+
+#{else}
+<div class="empty">
+    There is currently nothing to read here.
+</div>
+#{/else}
