--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,7 @@
     </div>
     <ul id="tools">
         <li>
-            <a href="#">Log in to write something</a>
+            <a href="@{Admin.index()}">Log in to write something</a>
         </li>
     </ul>
     <div id="title">
